--- a/29/systemsekkei/HTMLPage1.html
+++ b/29/systemsekkei/HTMLPage1.html
@@ -15,20 +15,18 @@
         }
     </script>
 
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
 </head>
+
+
 
 <body class="gradient">
 
-    <!--<div class="text">-->                <!--スライドアニメーション-->
-    <!--<h1 class="title">-->
-    <!--<span>おすすめの予定表</span>-->
-    <!--</h1>-->
-    <!--<p class="sentence">-->
-    <!--<span>！あなたにあった旅の経路を作成！</span>-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</style>-->
     <center><h1><b>おすすめの予定表</b></h1></center>
+
+    
+
     <center>！あなたにあった旅の経路を作成！</center>
 
     <center><h2>行きたい観光地</h2></center>
@@ -66,7 +64,7 @@
 
     <center>先にどこ行きたい？</center>
     <form name="when come here">
-　　<!--ここでなんかやる-->
+        <!--ここでなんかやる-->
         <div class="radio-wrapp">
             <input type="radio" name="testt" value="First">1
             <input type="radio" name="testt" value="Second">2
